RESOLVED FIXED182914
Fix build error after r228417 without ACCESSIBILITY
https://bugs.webkit.org/show_bug.cgi?id=182914
Summary Fix build error after r228417 without ACCESSIBILITY
Yoshiaki Jitsukawa
Reported 2018-02-18 17:42:37 PST
Without HAVE(ACCESSIBILITY), AXObjectCache::deferFocusedUIElementChangeIfNeeded is undefined.
Attachments
Patch (1.73 KB, patch)
2018-02-18 17:52 PST, Yoshiaki Jitsukawa
no flags
Patch (1.73 KB, patch)
2018-02-18 17:54 PST, Yoshiaki Jitsukawa
no flags
Yoshiaki Jitsukawa
Comment 1 2018-02-18 17:52:07 PST
Yoshiaki Jitsukawa
Comment 2 2018-02-18 17:54:32 PST
WebKit Commit Bot
Comment 3 2018-02-18 18:46:38 PST
Comment on attachment 334131 [details] Patch Clearing flags on attachment: 334131 Committed r228607: <https://trac.webkit.org/changeset/228607>
WebKit Commit Bot
Comment 4 2018-02-18 18:46:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-02-18 18:47:21 PST
Note You need to log in before you can comment on or make changes to this bug.