Fix build error after r228417 without ACCESSIBILITY https://bugs.webkit.org/show_bug.cgi?id=182914

Patch by Yoshiaki Jitsukawa <Yoshiaki.Jitsukawa@sony.com> on 2018-02-18
Reviewed by Chris Fleizach.

An inline empty version of AXObjectCache::deferFocusdUIElementChangeIfNeeded()
needs to be defined if not HAVE(ACCESSIBILITY).

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::deferFocusedUIElementChangeIfNeeded):

Canonical link: https://commits.webkit.org/198665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228607 268f45cc-cd09-0410-ab3c-d52691b4dbfc